# maximal-cliques-scale-free-rand-graph

./: .gitignore  .gitmodules  LICENSE  README.md  experiments.py
code/: CMakeLists.txt
code/cli/: cliques_in_core.cpp  cliques_in_gnp.cpp
code/include/: cliques.hpp  random.hpp  random_graph.hpp
code/src/: cliques.cpp  random.cpp  random_graph.cpp
data/: .gitignore  merge-csv.sh  precomp_cliques_core.csv  precomp_cliques_gnp.csv
eval/: dense_gnp.R  irg_girg_core.R  runtime.R
